Docs/Med/Compass/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compass-ci-playbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: compass-ci-playbook
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: compass-ci-playbook
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: compass-ci-playbook
          image: compass-ci-playbook
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 64Mi
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8888
              name: metrics
          readinessProbe:
            httpGet:
              port: metrics
              path: /metrics
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              port: metrics
              path: /alive
            initialDelaySeconds: 10
