Docs/Med/Compass/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: compass-ci-playbook-production
    app.kubernetes.io/name: compass-ci-playbook-service
  name: compass-ci-playbook-service
  namespace: compass-ci-playbook-production
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: compass-ci-playbook
    app.kubernetes.io/environment: production
    app.kubernetes.io/name: compass-ci-playbook
  type: ClusterIP
